# RTLauncher

./: README.md  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: main.yml  pr.yml
app/: layout.tsx  page.tsx
app/initialize/: page.tsx
components/: app-sidebar.tsx  example-switcher.tsx  nav-main.tsx  nav-user.tsx  title-bar.tsx
components/ui/: breadcrumb.tsx  sidebar.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: README.md  app_config.rs  client_list.rs  error.rs  lib.rs  models.rs  source.rs  task.rs  utils.rs
src-tauri/src/auth/: littleskinLoader.rs  official.rs
src-tauri/src/download/: config.rs  downloader.rs  mod.rs  task.rs
src-tauri/src/game_version/: get_origin_version.rs  get_version.rs  parse_versions.rs
src-tauri/src/handler/: mod.rs
src-tauri/src/tasks/: client.rs  mod.rs
src-tauri/src/utils/: delay_test.rs  delay_test_usage.md  download.rs
