[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Lighting-Team"]
license = "GNU GPL v3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
sqlite = "0.30"
tokio = { version = "1.0", features = ["full"] }
url = "2.2"
webbrowser = "0.8"
image = { version = "0.24", features = ["png"] }
anyhow = "1.0"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
