[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Lighting-Team"]
license = "GNU GPL v3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
once_cell = "1"
urlencoding = "2"
env_logger = "0.10"
sha1 = "0.10"
futures = "0.3"
indicatif = "0.17"
dashmap = "5"
uuid = { version = "1", features = ["v4"] }
console = "0.15"